--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 2rem 2rem;
-    background: rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(10px);
+    background: rgba(0, 0, 0, .1);
+    backdrop-filter: blur(20px);
     z-index: 100;
 }
 
@@ -170,7 +170,8 @@ body {
     margin-bottom: 20px;
 }
 
-.coming-soon .movies-out-now {
+.kids-movies,
+.movies-out-now {
     display: grid;
     margin-left: auto;
     margin-right: auto;
