--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html {
 }
 
 body {
-    background: black;
+    background: rgb(0, 0, 0);
 }
 
 .header {
@@ -40,9 +40,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 2rem 2rem;
-    background: rgba(0, 0, 0, .1);
-    backdrop-filter: blur(20px);
+    padding: 15px 30px;
+    background: none;
     z-index: 100;
 }
 
@@ -64,10 +63,11 @@ body {
 }
 
 .navbar a {
-    padding: 0 30px;
+    padding: 0 20px;
     color: white; 
     font-weight: bold;
     font-size: 20px;
+    text-transform: capitalize;
     transition: 0.3s ease;
 }
 
@@ -75,23 +75,27 @@ body {
     color: var(--main-color);
 }
 
-.search {
+.heading-right {
     display: flex;
     align-items: center;
-    background: white;
-    border-radius: 20px;
-    padding: 10px;
+    justify-content: center;
 }
 
 .search i {
     color: black;
 }
 
+.search {
+    background: white;
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    padding: 10px;
+}
 .search-bar {
     font-size: 15px;
     margin-left: 10px;
     border: none;
-    background: transparent;
     outline: none;
 }
 
@@ -100,133 +104,172 @@ body {
     font-weight: bold;
 }
 
-.banner {
-    position: relative;
+.user {
+    color: white;
+    margin-left: 20px;
+}
+
+.home {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    height: 100%;
     width: 100%;
-    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background: black;
-}
-
-.banner img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
     z-index: -1;
 }
 
-.banner-content {
-    padding: 200px 150px;
-}
-
-.banner-content h2 {
-    color: white;
-    font-weight: bold;
-    font-size: 50px;
-}
-
-.banner-content span {
-    color: white;
-    font-size: 22px;
-}
-
-.banner-content p {
-    font-size: 20px;
-    font-weight: bold;
-    color: rgb(255, 255, 255);
-    margin: 10px 0;
-    width: 60%;
-}
-
-.banner-content button {
-    border: none;
-    padding: 10px 35px;
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    background-color: var(--main-color);
-    border-radius: 5px;
-    transition: 0.3s ease;
-}
-
-.banner-content button:hover {
-    box-shadow: 0px 0px 25px var(--main-color);
-}
-
-.banner-content button:active {
-    background: white;
-    color: var(--main-color);
-}
-
-.heading {
-    color: var(--text-color);
-    font-size: 40px;
-    padding: 0 20px;
-    margin-top: 50px;
-    margin-bottom: 20px;
-}
-
-.kids-movies,
-.movies-out-now {
-    display: grid;
-    margin-left: auto;
-    margin-right: auto;
-    grid-template-columns: repeat(auto-fit, minmax(190px, auto));
-}
-
-
-.movie {
+.swiper {
     width: 100%;
-    height: 250px;
+    height: 100%;
+    z-index: 10;
 }
 
-.movie img {
+.swiper-slide {
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.content {
+    height: 70vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 40px 0 30px;
+    position: relative;
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 50px;
+}
+
+#title h1 {
+    font-size: 60px;
+    font-weight: bold;
+    color: white;
+}
+
+#description {
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+}
+#description p {
+    color: white;
+    font-size: 20px;
+    max-width: 500px;
+    line-height: 1.4rem;
+}
+
+.buttons {
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+}
+
+.playButton button {
+    display: inline-block;
+    padding: 10px 30px;
+    background-color: var(--main-color);
+    border: none;
+    margin: 10px 5px;
+    color: white;
+    font-size: 1.1rem;
+    font-weight: bold;
+    border-radius: 5px;
     cursor: pointer;
     transition: 0.3s ease;
 }
 
-.movie img:hover {
-    transform: translateY(-15px);
+.detailsButton button {
+    display: inline-block;
+    padding: 10px 30px;
+    background-color: white;
+    border: none;
+    margin: 10px 5px;
+    color: var(--main-color);
+    font-size: 1.1rem;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.detailsButton button:hover {
+    box-shadow: 0 0 25px var(--main-color);
+}
+
+.playButton button:hover {
+    box-shadow: 0 0 25px white;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+    color: white !important;
+    margin: 60px 0 !important;
+}
+
+.thumbsSwiper {
+    box-sizing: border-box;
+    padding: 10px 0;
+    max-width: 90%;
+    overflow-y: unset !important;
+}
+
+.thumbsSwiper .swiper-slide {
+    width: 25%;
+    height: 100%;
+    cursor: pointer;
+    padding: 0 10px;
+    background-color: transparent;
+    border-radius: 20px;
+}
+
+.thumbsSwiper .swiper-slide {
+    border-radius: 15px;
+}
+
+.thumbsSwiper .swiper-slide img {
+    border-radius: 15px;
 }
 
 /*Responsiveness*/
-
-@media (max-width: 1080) {
-    .banner-content {
-        padding: 0 100px;
-    }
-}
-
-@media (max-width: 950px) {
-    .header {
-        padding: 18px 5%;
-    }
-    section {
-        padding: 50px 5%;
-    }
+@media only screen and (max-width: 875px) {
     #menu-icon {
         display: block;
     }
     .navbar {
         position: absolute;
         top: 100%;
-        left: 0;
         right: 0;
+        width: 50%;
         padding: 1rem 3rem;
-        background-color: rgba(0, 0, 0, 0.8);
-        display: none ;
+        background-color: rgba(255, 255, 255, 0.8);
+        border-left: 2px solid var(--main-color);
+        border-bottom: 2px solid var(--main-color);
+        border-bottom-left-radius: 2rem;
+        display: none;
     }
     .navbar li {
         display: block;
         font-size: 2rem;
-        margin: 10px 0;
+        margin: 3rem 0;
         color: var(--text-color);
     }
     .navbar.active {
@@ -234,35 +277,35 @@ body {
     }
 }
 
-@media (max-width: 780px) {
-    .banner-content p {
-        font-size: 16px;
-        width: 100%;
+@media only screen and (max-width: 720px) {
+    .content {
+        flex-wrap: wrap;
+        padding: 60px 20px;
+    }
+
+    #title h1 {
+        font-size: 50px;
+    }
+
+    #description p {
+        margin: 20px 0;
     }
 }
 
-@media (max-width: 600px) {
-    .banner-content h2 {
-        font-size: 25px;
+@media only screen and (max-width: 450px) {
+    #title h1 {
+        font-size: 40px;
     }
 
-    .banner-content p {
-        font-size: 14px;
-        width: 100%;
-    }
-}
-
-@media (max-width: 450px) {
-    .banner-content p {
-        width: 120%;
-    }
-    .banner-content h2 {
-        font-size: 1.3rem;
-    }
-    .banner-content span {
+    #description p {
         font-size: 15px;
     }
+
+    .detailsButton button {
+        padding: 10px 25px;
+    }
 }
+
 
 
 
