--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ body {
     z-index: 100;
 }
 
-#menu-icon {
+#menu-icon,
+#search-icon {
     font-size: 30px;
     color: var(--main-color);
     display: none;
@@ -251,7 +252,8 @@ body {
 
 /*Responsiveness*/
 @media only screen and (max-width: 875px) {
-    #menu-icon {
+    #menu-icon,
+    #search-icon {
         display: block;
     }
     .navbar {
@@ -264,6 +266,9 @@ body {
         border-left: 2px solid var(--main-color);
         border-bottom: 2px solid var(--main-color);
         border-bottom-left-radius: 2rem;
+        display: none;
+    }
+    .search {
         display: none;
     }
     .navbar li {
@@ -303,6 +308,21 @@ body {
 
     .detailsButton button {
         padding: 10px 25px;
+    }
+}
+
+@media only screen and (max-width: 380px) {
+    #title h1 {
+        font-size: 30px;
+    }
+
+    #description p {
+        font-size: 15px;
+    }
+
+    .detailsButton button {
+        padding: 16px 20px;
+        font-size: 9px;
     }
 }
 
