--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 :root {
     --text-color: white;
-    --main-color: rgb(255, 165, 0);
+    --main-color: #ffa500;
 }
 
 html {
@@ -174,8 +174,9 @@ body {
 #description p {
     color: white;
     font-size: 20px;
+    font-weight: bold;
     max-width: 500px;
-    line-height: 1.3rem;
+    line-height: 1.5rem;
 }
 
 .buttons {
@@ -318,7 +319,6 @@ body {
 
     #description p {
         font-size: 15px;
-        font-weight:bold;
         margin: 10px 0;
     }
 
