--- a/style.css
+++ b/style.css
@@ -260,12 +260,13 @@ body {
         position: absolute;
         top: 100%;
         right: 0;
-        width: 50%;
-        padding: 1rem 3rem;
-        background-color: rgba(255, 255, 255, 0.8);
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.95);
         border-left: 2px solid var(--main-color);
+        border-right: 2px solid var(--main-color);
         border-bottom: 2px solid var(--main-color);
         border-bottom-left-radius: 2rem;
+        border-bottom-right-radius: 2rem;
         display: none;
     }
     .search {
@@ -273,8 +274,9 @@ body {
     }
     .navbar li {
         display: block;
+        text-align: center;
         font-size: 2rem;
-        margin: 3rem 0;
+        margin: .5rem 0;
         color: var(--text-color);
     }
     .navbar.active {
